# Drake_CFS_Sim

./: .gitignore  .gitmodules  README.md
CFS_Planner/: .gitignore  CMakeLists.txt  T_guess.npy  archive.py  readme.md  setup.py  solve.py
CFS_Planner/config/: cart_reference.txt  cart_reference_CFSLin.txt
CFS_Planner/config/cam_calibration/: .gitignore
CFS_Planner/config/cam_calibration/845112072047/: cv_calib_realsense.yaml  extrinsics.txt
CFS_Planner/config/cam_calibration/henderson/: cv_calib_realsense.yaml  extrinsics_mat.txt  (+2 more)
CFS_Planner/config/cfs_parameters/: parameters.txt  xref_position_ori.txt  xreference_ur.txt
CFS_Planner/config/geometry_wrappers/: container.xyz  conveyor1.xyz  robot_capsules.txt  robot_capsules_gp50.txt
CFS_Planner/config/robot_properties/: robot_DH.txt  robot_DH_gp50.txt  robot_DH_gp7.txt  robot_DH_ur5.txt
CFS_Planner/config/tool_calibration/: tool_cal_mat.txt  tool_cal_mat_ur5.txt
CFS_Planner/config/user_config/: README.md  user_config_default.txt
CFS_Planner/data/: fix_pallet_model.ipynb
CFS_Planner/data/bagger_test/: bagger_pose.txt  bagger_scene0.txt  bagger_scene1.txt  bagger_scene10.txt  bagger_scene11.txt  bagger_scene12.txt  bagger_scene13.txt  bagger_scene14.txt  bagger_scene15.txt  bagger_scene16.txt  bagger_scene17.txt  bagger_scene18.txt  bagger_scene19.txt  bagger_scene2.txt  bagger_scene20.txt  bagger_scene21.txt  bagger_scene22.txt  bagger_scene23.txt  bagger_scene24.txt  bagger_scene3.txt  bagger_scene4.txt  bagger_scene5.txt  bagger_scene6.txt  bagger_scene7.txt  bagger_scene8.txt  bagger_scene9.txt  camera_pose0.txt  camera_pose10.txt  camera_pose15.txt  camera_pose18.txt  camera_pose4.txt  camera_pose8.txt  noise_sigmas.npy  rot_err_all.npy  trans_err_all.npy
CFS_Planner/data/box_packing_test/: box_packing_model.xyz  trans_err_all.npy
CFS_Planner/data/container2_robot2_test/: camera_x_angles.npy  container2_robot2_model  container2_robot2_scene0.txt  rot_err_all.npy
CFS_Planner/data/container_test/: camera_pose1.txt  camera_pose16.txt  camera_pose20.txt  camera_pose24.txt  camera_pose3.txt  camera_pose5.txt  camera_pose7.txt  camera_pose9.txt  camera_x_angles.npy  camera_x_coords.npy  container_scene0.txt  noise_sigmas.npy
CFS_Planner/data/conveyor_test/: camera_pose11.txt  camera_pose12.txt  camera_pose13.txt  camera_pose14.txt  camera_pose17.txt  camera_pose19.txt  camera_pose2.txt  camera_pose21.txt  camera_pose22.txt  camera_pose23.txt  camera_pose6.txt  conveyor_pose.txt  conveyor_scene0.txt  conveyor_scene1.txt  conveyor_scene10.txt  conveyor_scene11.txt  conveyor_scene12.txt  conveyor_scene13.txt  conveyor_scene14.txt  conveyor_scene15.txt  conveyor_scene16.txt  conveyor_scene17.txt  conveyor_scene18.txt  conveyor_scene19.txt  conveyor_scene2.txt  conveyor_scene20.txt  conveyor_scene21.txt  conveyor_scene22.txt  conveyor_scene23.txt  conveyor_scene24.txt  conveyor_scene3.txt  conveyor_scene4.txt  conveyor_scene5.txt  conveyor_scene6.txt  conveyor_scene7.txt  conveyor_scene8.txt  conveyor_scene9.txt  rot_err_all.npy  trans_err_all.npy
CFS_Planner/data/pallet_test/: box_packing_model_fixed.xyz  pallet_model_fixed.xyz  pallet_scene0_record.txt
CFS_Planner/data/pnp_cali/: test_matrices.yml
CFS_Planner/data/tool_cali/: tool_cali_2finger_test.txt  tool_cali_suction_test.txt
CFS_Planner/data/tool_test/: camera_pose0.txt  tool_pose.txt
CFS_Planner/ikfast/: CMakeLists.txt  README.md
CFS_Planner/ikfast/ikfast/: ikfast61gp12.cpp  ikfast61gp7.cpp  ikfastgp7.hz
CFS_Planner/ikfast/ikfast_gp12/: CMakeLists.txt  ikfast_wrapper.cpp
CFS_Planner/ikfast/ikfast_gp7/: ikfast_wrapper.cpp
CFS_Planner/include/: hardware_interface.h  robot_var.h  udp_socket.h
CFS_Planner/include/cfslib/: cfslib.hpp
CFS_Planner/include/detector/: chess_board_detector.h  pnp_problem.h
CFS_Planner/include/epick_driver/: default_driver_factory.hpp  default_serial_factory.hpp  driver_factory.hpp  epick_gripper.hpp  serial_factory.hpp
CFS_Planner/include/realsense/: realsense.h
CFS_Planner/include/robot_model/: robot_model_gp50.h  robot_model_gp7.h
CFS_Planner/lib/: CMakeLists.txt
CFS_Planner/lib/qplib/: qp++.cpp  qp++.hpp
CFS_Planner/scripts/: Demo1_CFSPlanner.py  Demo2_RobotHandover.py  Demo3_RobotPick.py  support_functions.py
CFS_Planner/scripts/motologix/: cfsplanning.py  communication_interface.py
CFS_Planner/src/: cfslib.cpp  hardware_interface.cpp  udp_Interface.cpp
CFS_Planner/src/Core/: PlanningCore.cpp  PlanningCoreOriginal.cpp
CFS_Planner/src/Gripper/: activate.cpp  default_driver.cpp  default_driver_factory.cpp  default_serial_factory.cpp  epick_gripper_hardware_interface.cpp  grip.cpp  hardware_interface_utils.cpp  release.cpp
CFS_Planner/src/Highlevel/: CFSPickPlace.cpp
CFS_Planner/src/Query/: ProcessedQuery.cpp  UserQuery.cpp
CFS_Planner/src/Robot/: Robot.cpp
CFS_Planner/src/Test/: 1_hand_eye_calibration.cpp  1_hand_eye_calibration_UT.cpp  1_hand_eye_calibration_auto.cpp  1_hand_eye_calibration_backup.cpp  1_hand_eye_calibration_evaluation.cpp  1_hand_eye_calibration_gp7.cpp  1_hand_eye_calibration_pnpUT.cpp  1_hand_eye_calibration_record.cpp  1_hand_eye_calibration_touch_test.cpp  2_tool_calibration.cpp  2_tool_calibration_UT.cpp  3_environment_calibration.py  3_environment_calibration_UT.py  3_environment_calibration_UT_test.py  3_environment_calibration_analysis.ipynb  3_environment_calibration_benchmark.py  3_environment_calibration_benchmark_container2.py  3_environment_calibration_get_pcd.py  3_environment_calibration_teaser.ipynb  3_tool_calibration_test.py  4_pickplace.cpp  5_optimized_pick_place.cpp  5_pick_place_profile.ipynb  environment_calibration.py  environment_calibration_test.py  gripper_activate.cpp  gripper_grip.cpp  gripper_release.cpp  pcd_registration.py  teaser_helpers.py  test.py  test_CFS_subroutine.cpp
CFS_Planner/src/Trajectory/: Trajectory.cpp
CFS_Planner/src/Utils/: CartLQR.cpp  FileIO.cpp  ICOPInvKine.cpp  Math.cpp
CFS_Planner/src/ikfast/: ikfastgp12.h
CFS_Planner/src/robot_model/: modern_robotics.cpp  robot_model_gp50.cpp  robot_model_gp7.cpp
(+207 files in other folders)
